<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="320dp"
    android:padding="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/color_white"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:src="@drawable/img_send_message"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/send_notification"
        android:textColor="@color/color_black"
        android:paddingBottom="10dp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alarm_send"
        android:textColor="@color/color_black"
        android:paddingBottom="30dp"
        android:textSize="13dp" />



    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wrie_message"
        android:textColor="@color/color_black"
        android:paddingBottom="10dp"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="19dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textColor="@color/color_black"
            android:background="@drawable/round_custom_button_cancel"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="12dp"
            android:text="@string/no_value" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:background="@drawable/round_custom_button_ok"
            android:textSize="12dp"
            android:text="@string/yes_value" />

    </LinearLayout>

</LinearLayout>