<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/dialog_round_shape"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_speed_limit"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:textColor="@color/color_header"
        android:textSize="19dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtLimitSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/speed_limit"
        android:textColor="@color/color_header"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:background="@drawable/speed_min_circle_shape"
            android:gravity="center"
            android:text="90.5"
            android:textColor="@color/color_black"
            android:textSize="17dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/txtRealSpeed"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/speed_max_circle_shape"
            android:gravity="center"
            android:text="90"
            android:textColor="@color/color_black"
            android:textSize="30dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <!--<Button-->
        <!--android:id="@+id/btnOk"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="@drawable/round_custom_button_ok"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/ok"-->
        <!--android:textColor="@color/color_white"-->
        <!--android:textSize="15dp" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            style="@style/Main_Buttons.DialogeOkButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ok" />


    </LinearLayout>

</LinearLayout>